--- a/src/app/pages/user-create/user-create.component.html
+++ b/src/app/pages/user-create/user-create.component.html
@@ -1,3 +1,12 @@
+<!--
+  Title: user-create.component.html
+  Author: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+  Date: 04/19/23
+  Last Modified by: Walter McCue
+  Last Modification Date: 04/19/23
+  Description: html for the bcrs project
+-->
+
 <div fxLayout="colums">
   <mat-card
     style="margin: auto; margin-top: 100px; width: 50%"
