--- a/src/app/pages/security-question-details/security-question-details.component.html
+++ b/src/app/pages/security-question-details/security-question-details.component.html
@@ -1,3 +1,12 @@
+<!--
+  Title: security-question-details.component.html
+  Author: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+  Date: 04/19/23
+  Last Modified by: Walter McCue
+  Last Modification Date: 04/19/23
+  Description: html for the bcrs project
+-->
+
 <div fxLayout="column">
   <mat-card class="mat-elevation-z0">
     <mat-card-title>Update Security Question Form</mat-card-title>
