--- a/src/app/pages/security-question-list/security-question-list.component.html
+++ b/src/app/pages/security-question-list/security-question-list.component.html
@@ -1,3 +1,12 @@
+<!--
+  Title: security-question-list.component.html
+  Author: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+  Date: 04/19/23
+  Last Modified by: Walter McCue
+  Last Modification Date: 04/19/23
+  Description: html for the bcrs project
+-->
+
 <p-confirmDialog [style]="{ width: '35vw' }" [baseZIndex]="10000"
   rejectButtonStyleClass="p-button-text"></p-confirmDialog>
 
