--- a/src/app/pages/user-details/user-details.component.html
+++ b/src/app/pages/user-details/user-details.component.html
@@ -1,3 +1,12 @@
+<!--
+  Title: user-details.component.html
+  Author: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
+  Date: 04/19/23
+  Last Modified by: Walter McCue
+  Last Modification Date: 04/19/23
+  Description: html for the bcrs project
+-->
+
 <div fxLayout="column">
   <mat-card class="mat-elevation-z0">
     <mat-card-title style="text-align: center; font-weight: lighter">Update User Form</mat-card-title>
