--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -33,7 +33,7 @@
             Signed in as
             <span style="font-weight: normal">{{ userName }}</span>
           </p>
-          
+
           <button mat-menu-item [matMenuTriggerFor]="configs">
             <mat-icon>settings</mat-icon>
             Configurations
@@ -48,7 +48,7 @@
             <!-- <button mat-menu-item routerLink="roles" class="">
               ROLES
             </button> -->
-            <button mat-menu-item routerLink="services" class="">
+            <button mat-menu-item routerLink="service-list" class="">
               SERVICES
             </button>
           </mat-menu>
