--- a/src/app/pages/service-list/service-list.component.html
+++ b/src/app/pages/service-list/service-list.component.html
@@ -7,4 +7,94 @@
   Description: html for the bcrs project
 -->
 
-<p>service-list works!</p>
+<p-confirmDialog [style]="{ width: '35vw' }" [baseZIndex]="10000"
+  rejectButtonStyleClass="p-button-text"></p-confirmDialog>
+
+<div fxLayout="column" fxLayoutGap="20px">
+  <div fxFlex>
+    <h1 class="page-header">
+      Services Configuration Page! <br />
+      <span class="subtitle">
+        Fields marked with an asterisk(*) are required.
+      </span>
+    </h1>
+  </div>
+
+  <div>
+    <p-messages [(value)]="serverMessages" [enableService]="false" style="color: #fff;"></p-messages>
+  </div>
+
+  <div fxFlex>
+    <div fxLayout="column" class="pageDesign">
+      <mat-card>
+        <form [formGroup]="serviceForm" (ngSubmit)="create(); serviceForm.reset()">
+
+          <mat-form-field appearance="fill" class="w-50">
+            <mat-label>Service Name</mat-label>
+            <input type="text" matInput formControlName="serviceName" required placeholder="Enter a service name..." /><br />
+          </mat-form-field>
+
+          <mat-form-field appearance="fill" class="w-30">
+            <mat-label>Service Price</mat-label>
+            <input type="text" matInput formControlName="price" required placeholder="Enter a price..." />
+          </mat-form-field>
+
+            <button mat-button type="submit" [disabled]="!serviceForm.valid" class="primary-color">
+              Add Service
+            </button>
+
+          <mat-error *ngIf="serviceForm.controls['serviceName'].hasError('required') && serviceForm.controls['serviceName'].touched">
+            Service Name is a required field.
+          </mat-error>
+          <mat-error *ngIf="serviceForm.controls['price'].hasError('required') && serviceForm.controls['price'].touched">
+            Price is a required field.
+          </mat-error>
+          
+        </form>
+      </mat-card>
+    </div>
+  </div>
+
+
+  <div fxFlex>
+    <mat-card>
+      <p-table [value]="services" responsiveLayout="scroll" class="api-table">
+
+        <ng-template pTemplate="header">
+          <tr>
+            <th>Service Name</th>
+            <th>Price</th>
+            <th style="width: 8rem"></th>
+          </tr>
+        </ng-template>
+
+        <ng-template pTemplate="body" let-service>
+          <tr>
+            <td>{{ service.serviceName }}</td>
+            <td>{{ service.price }}</td>
+            <td style="text-align: center">
+              <button mat-button type="button" routerLink="/security-questions/{{ service._id }}">
+                <i class="fa-solid fa-pen-to-square"></i>
+              </button>
+              <button mat-button type="button" (click)="delete(service._id)">
+                <i class="fa-regular fa-trash-can"></i>
+              </button>
+            </td>
+          </tr>
+        </ng-template>
+
+      </p-table>
+    </mat-card>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
