--- a/src/app/pages/service-list/service-list.component.css
+++ b/src/app/pages/service-list/service-list.component.css
@@ -6,3 +6,15 @@ Last Modified by: Walter McCue
 Last Modification Date: 04/19/23
 Description: component styling for the bcrs project
 */
+
+.w-30 {
+  width: 30%;
+  margin-inline: 20px;
+}
+
+.w-50 {
+  width: 50%;
+  margin-inline: 20px;
+}
+
+
