--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@ References: .neon-btn { Kevin Powell: youtube/github; }
 /* You can add global styles to this file, and also import other style files */
 
 :root {
-  --green: #2a623d;
+  --green: #2e7d32;
   --silver: #5d5d5d;
 }
 
