--- a/src/styles.css
+++ b/src/styles.css
@@ -46,6 +46,27 @@ body {
   padding: 20px;
 }
 
+.form-button {
+  display: block;
+
+}
+
+/* Width Styles */
+
+.w-50 {
+  width: 50%;
+}
+
+.w-20 {
+  width: 20%;
+  margin-inline: 20px;
+}
+
+.w-60 {
+  width: 60%;
+  margin-inline: 20px;
+}
+
 /* Color Styles */
 
 .primary-color {
@@ -98,6 +119,11 @@ body {
   margin-right: auto;
   place-items: center;
   max-width: 1100px;
+}
+
+.formDesign {
+  display: flex;
+  flex-direction: row;
 }
 
 /* Neon Button Styling */
@@ -161,10 +187,6 @@ body {
   outline: none;
 }
 
-.w-50 {
-  width: 50%;
-}
-
 /* API Tables */
 
 .api-table {
@@ -195,6 +217,15 @@ body {
 
   .content-container {
     width: 95%;
+  }
+
+  .formDesign {
+    flex-direction: column;
+  }
+
+  /* Width Styles */
+  .w-20, .w-50, .w-60 {
+    width: 90%;
   }
 
   /* API Tables */
