--- a/src/app/pages/security-question-details/security-question-details.component.html
+++ b/src/app/pages/security-question-details/security-question-details.component.html
@@ -7,21 +7,23 @@
   Description: html for the bcrs project
 -->
 
+<!-- update security question page -->
 <div fxLayout="column">
   <mat-card class="mat-elevation-z0">
+    <!-- title -->
     <mat-card-title>Update Security Question Form</mat-card-title>
     <mat-card-subtitle>Fields marked with an asterisk (*) are required</mat-card-subtitle>
     <br>
-
+    <!-- error messages dialog -->
     <p-messages [(value)]="errorMessages" [enableService]="false"></p-messages>
-
+    <!-- edit question form -->
     <form [formGroup]="editForm" (ngSubmit)="save(); editForm.reset();">
       <mat-card-content>
         <div>
           <mat-form-field appearance="fill">
             <mat-label>Security question</mat-label>
             <input type="text" matInput formControlName="text" required />
-
+            <!-- if you click save and it's empty, this error will show up -->
             <mat-error class="error"
               *ngIf="editForm.controls['text'].hasError('required') && editForm.controls['text'].touched">
               Security question is a required field.
@@ -31,6 +33,7 @@
       </mat-card-content>
 
       <br />
+      <!-- cancel and save buttons -->
       <mat-card-actions>
         <button mat-raised-button (click)="cancel()">Cancel</button>
         <button mat-raised-button (click)="save()">Save</button>
