--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,11 +8,13 @@
   Description: html for the bcrs project
 -->
 
+<!-- Placeholder code until we update it -->
 <div fxLayout="column" class="main-welcome">
   <h1 class="title">
     Welcome to WEB 450's - Bob's Computer Repair Shop<br />
     <span class="subtitle">
-      Pay close attention to the requirements, double and triple check the files for code attribution, and do not wait until the last minute to begin working on your tasks.
+      Pay close attention to the requirements, double and triple check the files for code attribution, and do not wait
+      until the last minute to begin working on your tasks.
     </span>
   </h1>
 </div>
