--- a/src/app/pages/service-details/service-details.component.html
+++ b/src/app/pages/service-details/service-details.component.html
@@ -23,6 +23,7 @@
 
     <p-messages [(value)]="errorMessages" [enableService]="false"></p-messages>
 
+    <!-- Create Service Form -->
     <form [formGroup]="updateForm" (ngSubmit)="save(); updateForm.reset();">
       <mat-card-content>
         <div>
@@ -36,10 +37,33 @@
             <input type="text" matInput formControlName="price" required placeholder="Enter a price..." />
           </mat-form-field>
 
+          <!-- Service Name Validation Errors -->
+          <mat-error *ngIf="updateForm.controls['serviceName'].hasError('required') && updateForm.controls['serviceName'].touched">
+            Service Name is a required field.
+          </mat-error>
+          <mat-error *ngIf="updateForm.controls['serviceName'].hasError('minlength') && updateForm.controls['serviceName'].touched">
+            Service Name must be at least 3 characters.
+          </mat-error>
+          <mat-error *ngIf="updateForm.controls['serviceName'].hasError('maxlength') && updateForm.controls['serviceName'].touched">
+            Service Name must be less than 50 characters.
+          </mat-error>
+
+          <!-- Price Validation Errors -->
+          <mat-error *ngIf="updateForm.controls['price'].hasError('required') && updateForm.controls['price'].touched">
+            Price is a required field.
+          </mat-error>
+          <mat-error *ngIf="updateForm.controls['price'].hasError('pattern') && updateForm.controls['price'].touched">
+            Price must be a number up to 2 decimal places.
+          </mat-error>
+          <mat-error *ngIf="updateForm.controls['price'].hasError('maxlength') && updateForm.controls['price'].touched">
+            We cannot charge our customers that. Please adjust the price to a more affordable level (under 8 characters).
+          </mat-error>
+
         </div>
       </mat-card-content>
 
-      <mat-card-actions>
+      <!-- Cancel and Submit buttons -->
+      <mat-card-actions class="p-10">
         <button mat-raised-button (click)="cancel()" class="cancel form-button">Cancel</button>
         <button mat-raised-button (click)="save()"class="primary-color form-button">Save</button>
       </mat-card-actions>
