--- a/src/app/pages/user-details/user-details.component.html
+++ b/src/app/pages/user-details/user-details.component.html
@@ -93,10 +93,10 @@
       </mat-card-content>
 
       <mat-card-actions align="end">
-        <button mat-raised-button (click)="cancel()" class="cancel">
+        <button mat-raised-button (click)="cancel()" class="cancel form-button">
           Cancel
         </button>
-        <button mat-raised-button [disabled]="!form.valid" class="btn-primary primary-color">
+        <button mat-raised-button [disabled]="!form.valid" class="primary-color form-button">
           Submit
         </button>
       </mat-card-actions>
