--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -8,6 +8,7 @@
   Description: html for the bcrs project
 -->
 
+<!-- Page Header -->
 <h1 class="page-header">Contact Us</h1>
 
 <mat-card class="w-100">
