--- a/src/app/shared/base-layout/base-layout.component.html
+++ b/src/app/shared/base-layout/base-layout.component.html
@@ -31,7 +31,7 @@
         <button mat-icon-button [matMenuTriggerFor]="profileMenu" aria-label="User Profile menu">
           <mat-icon class="profile-btn">perm_identity</mat-icon>
         </button>
-        <mat-menu #profileMenu class=" p-20" x-position="before">
+        <mat-menu #profileMenu class="relative p-20" x-position="before">
           <p style="padding: 10px; font-size: 18px; color:#fff;">
             Signed in as
             <span style="font-weight: normal">{{ userName }}</span>
@@ -56,6 +56,23 @@
               SERVICES
             </button>
           </mat-menu>
+
+          <!-- Services Menu --><!--
+          <button mat-menu-item [matMenuTriggerFor]="services">
+            <mat-icon>build</mat-icon>
+            Services
+          </button>
+          <mat-menu #services="matMenu" class="service-menu">
+            <button mat-menu-item routerLink="purchases" class="">
+              Purchases by Service
+            </button>
+          </mat-menu>-->
+
+          <!-- User Profile --><!--
+          <button mat-menu-item routerLink="profile" class="">
+            <mat-icon>person</mat-icon>
+            Edit Profile
+          </button>-->
 
           <!-- Logout -->
           <button mat-menu-item (click)="logout()">
