not-found update

--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -14,7 +14,13 @@
 
   <!-- Not Found Image -->
   <div class="img-container house-img">
-    <img src="/assets/pngwing.com.png" alt="Slytherin Emblem" />
+    <p>Interesting to find you here.</p>
+    <!--
+      Image courtesy of:
+      https://www.insider.com/severus-snape-interesting-things-from-harry-potter-trivia
+    -->
+    <img src="/assets/snape.jpg" alt="404 Snake" />
+    <p>You must be lost.</p>
   </div>
 
   <br><br>
