--- a/src/app/pages/server-error/server-error.component.html
+++ b/src/app/pages/server-error/server-error.component.html
@@ -14,7 +14,9 @@
 
   <!-- Server Error Image -->
   <div class="img-container house-img">
-    <img src="/assets/pngwing.com.png" alt="Slytherin Emblem" />
+    <p>Where did those records go?</p>
+    <img src="/assets/wand.jpg" alt="Slytherin Emblem" />
+    <p>Maybe I'll just put this in here.</p>
   </div>
 
   <br><br>
