--- a/src/app/pages/not-found/not-found.component.css
+++ b/src/app/pages/not-found/not-found.component.css
@@ -9,16 +9,21 @@ Description: component styling for the bcrs project
 */
 
 h1 {
-  padding: 50px;
+  padding: 10px;
   font-size: 48px;
 }
 
 p {
-  padding: 50px;
+  padding: 5px;
   color: #fff;
   font-size: 24px;
 }
 
-.house-img img {
+img {
   height: 300px;
+}
+
+.house-img p {
+  padding: 0;
+  color: var(--green)
 }
