--- a/src/app/pages/server-error/server-error.component.css
+++ b/src/app/pages/server-error/server-error.component.css
@@ -9,16 +9,17 @@ Description: component styling for the bcrs project
 */
 
 h1 {
-  padding: 50px;
+  padding: 10px;
   font-size: 48px;
 }
 
 p {
-  padding: 50px;
+  padding: 10px;
   color: #fff;
   font-size: 24px;
 }
 
-.house-img img {
-  height: 300px;
+.house-img p {
+  padding: 5px;
+  color: var(--green)
 }
