--- a/src/app/pages/security-question-list/security-question-list.component.css
+++ b/src/app/pages/security-question-list/security-question-list.component.css
@@ -2,7 +2,7 @@
 Title: security-question-list.component.css
 Author: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
 Date: 04/19/23
-Last Modified by: Walter McCue
+Last Modified by: Carl Logan
 Last Modification Date: 04/19/23
 Description: component styling for the bcrs project
 */
