--- a/src/app/pages/about/about.component.css
+++ b/src/app/pages/about/about.component.css
@@ -3,7 +3,7 @@ Title: about.component.css
 Author: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
 Contributors: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
 Date: 04/16/23
-Last Modified by: Walter McCue
+Last Modified by: Thomas Schultz
 Last Modification Date: 04/16/23
 Description: component styling for the bcrs project
 */
