--- a/src/app/pages/user-create/user-create.component.css
+++ b/src/app/pages/user-create/user-create.component.css
@@ -2,7 +2,7 @@
 Title: user-create.component.css
 Author: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
 Date: 04/19/23
-Last Modified by: Walter McCue
+Last Modified by: Jamal Damir
 Last Modification Date: 04/19/23
 Description: component styling for the bcrs project
 */
