--- a/src/app/pages/user-create/user-create.component.html
+++ b/src/app/pages/user-create/user-create.component.html
@@ -2,7 +2,7 @@
   Title: user-create.component.html
   Author: Thomas Schultz, Jamal Damir, Carl Logan, Walter McCue
   Date: 04/19/23
-  Last Modified by: Walter McCue
+  Last Modified by: Jamal Damir
   Last Modification Date: 04/19/23
   Description: html for the bcrs project
 -->
@@ -30,9 +30,11 @@
     >
       <mat-card-content>
         <div fxLayout="column" fxLayoutGap="10px">
+
+          <!-- Username -->
           <mat-form-field appearance="fill">
             <mat-label>Username</mat-label>
-            <input type="text" matInput formControlName="userName" required />
+            <input type="text" matInput formControlName="userName" required autocomplete="off" />
             <mat-error
               *ngIf="
                 form.controls['userName'].hasError('required') &&
@@ -42,6 +44,7 @@
             >
           </mat-form-field>
 
+          <!-- Password -->
           <mat-form-field appearance="fill">
             <mat-label>Password</mat-label>
             <input
@@ -49,6 +52,7 @@
               matInput
               formControlName="password"
               required
+              autocomplete="off"
             />
             <mat-error
               *ngIf="
@@ -67,6 +71,7 @@
             >
           </mat-form-field>
 
+          <!-- First Name -->
           <mat-form-field appearance="fill">
             <mat-label>First name</mat-label>
             <input type="text" matInput formControlName="firstName" required />
@@ -77,8 +82,22 @@
               "
               >First name is a required field.</mat-error
             >
+            <mat-error
+              *ngIf="
+              form.controls['firstName'].hasError('minlength') &&
+              form.controls['firstName'].touched
+              "
+              >First Name must be at least 3 characters.</mat-error
+            >
+            <mat-error
+              *ngIf="
+              form.controls['firstName'].hasError('maxlength') &&
+              form.controls['firstName'].touched"
+              >First Name must be less than 35 characters.</mat-error
+            >
           </mat-form-field>
 
+          <!-- Last Name -->
           <mat-form-field appearance="fill">
             <mat-label>Last name</mat-label>
             <input type="text" matInput formControlName="lastName" required />
@@ -89,8 +108,21 @@
               "
               >Last name is a required field.</mat-error
             >
+            <mat-error
+              *ngIf="
+              form.controls['lastName'].hasError('minlength') &&
+              form.controls['lastName'].touched
+              "
+              >Last Name must be at least 3 characters.</mat-error
+            >
+            <mat-error
+              *ngIf="form.controls['lastName'].hasError('maxlength') &&
+              form.controls['lastName'].touched"
+              >Last Name must be less than 35 characters.</mat-error
+            >
           </mat-form-field>
 
+          <!-- Phone Number -->
           <mat-form-field appearance="fill">
             <mat-label>Phone Number</mat-label>
             <input
@@ -106,8 +138,15 @@
               "
               >Phone number is a required field.</mat-error
             >
+            <mat-error
+              *ngIf="
+              form.controls['phoneNumber'].hasError('pattern') &&
+              form.controls['phoneNumber'].touched"
+              >Phone number must be formatted as 999-999-9999.</mat-error
+            >
           </mat-form-field>
 
+          <!-- Email Address -->
           <mat-form-field appearance="fill">
             <mat-label>Email address</mat-label>
             <input type="text" matInput formControlName="email" required />
@@ -127,6 +166,7 @@
             >
           </mat-form-field>
 
+          <!-- Address -->
           <mat-form-field appearance="fill">
             <mat-label>Address</mat-label>
             <input
@@ -142,6 +182,20 @@
                 form.controls['email'].touched
               "
               >Address is a required field.</mat-error
+            >
+            <mat-error
+              *ngIf="
+                form.controls['address'].hasError('minlength') &&
+                form.controls['address'].touched
+                "
+                >Last Name must be at least 3 characters.</mat-error
+              >
+            <mat-error
+              *ngIf="
+              form.controls['address'].hasError('maxlength') &&
+              form.controls['address'].touched
+              "
+              >Last Name must be less than 75 characters.</mat-error
             >
           </mat-form-field>
         </div>
